# anthropology-toolkit-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/toolkit/: config.py  main.py  session.py
src/toolkit/routers/: _sse.py  chunker.py  codebook.py  coding.py  config.py  upload.py
src/toolkit/services/: chunker.py  codebook.py  coding.py  file_io.py
src/toolkit/static/: app.js  index.html  style.css
test_files/: interview_guide.txt  interview_transcript.txt  source_literature.txt
